<resources>
    <string name="app_name">Grad Helper</string>
    <string name="name_placeholder">Professor Name</string>
    <string name="title_placeholder">Professor Title</string>
    <string name="email_title">Email:</string>
    <string name="email_placeholder">Email Placeholder</string>
    <string name="office_title">Office:</string>
    <string name="office_placeholder">Office Placeholder</string>
    <string name="website_title">Website:</string>
    <string name="website_placeholder">Website Placeholder</string>
    <string name="research_focus_title">Research Focus:</string>
    <string name="research_placeholder">Research Placeholder</string>
    <string name="directions_button">Directions</string>
    <string name="directions_disclaimer">*to Building</string>
    <string name="research_name">Research Name</string>
    <string name="location_name">Location Name</string>
    <string name="research_description_title">Description:</string>
    <string name="research_description_content">Description Placeholder</string>
    <string name="class_name">Class Name</string>
    <string name="semester_offered_title">Semester Offered:</string>
    <string name="semester_offered_content">Semesters Offered Placeholder</string>
    <string name="course_id_placeholder">Course ID:</string>
    <string name="program_name">Program Name</string>
    <string name="classes_taken_title">Classes Taken</string>
    <string name="edit_button">Edit</string>
    <string name="degree_program">Degree Program</string>
    <string name="remaining_classes">Remaining Classes</string>
    <string name="degree_requirements_title">Degree Requirements Met:</string>
    <string name="theory">Theory</string>
    <string name="system_design">System Design</string>
    <string name="software_design">Software Design</string>
    <string name="core_requirements">Core Requirements</string>
    <string name="additional_requirements">Additional Requirements</string>
    <string name="advanced_coursework">Advanced Coursework</string>
    <string name="masters_project">CSCI 7200</string>
    <string name="research_seminar">CSCI 8990</string>
    <string name="masters_research">CSCI 7000</string>
    <string name="masters_thesis">CSCI 7300</string>
    <string name="additional_coursework">Addition Coursework (6 hours)</string>
    <string name="doctoral_dissertation">CSCI 9300 (9 hours)</string>
    <string name="masters_thesis_req">Masters Thesis</string>
    <string name="masters_project_req">Masters Project</string>
    <string name="masters_research_req">Masters Research</string>
    <string name="research_seminar_req">Research Seminar</string>
    <string name="doctoral_dissertation_req">Dissertation</string>
    <string name="additional_concentration_req">Additional Concentration</string>
    <string name="additional_req_placeholder">Additional Requirement</string>

    <string name="locations_text">Locations</string>
    <string name="degree_tracker_text">Degree Tracker</string>
    <string name="directory_text">Faculty Directory</string>
    <string name="class_list_text">Class List</string>
    <string name="research_list_text">Research Topics</string>


    <string-array name="location_types">
        <item>Restaurant</item>
        <item>Coffee Shop</item>
        <item>Grocery Store</item>
        <item>Pharmacy</item>
        <item>Department Store</item>
        <item>Doctor\'s Office</item>
        <item>Attractions</item>
        <item>Hospital</item>
    </string-array>

    <string-array name="degree_types">
        <item>None Selected</item>
        <item>M.S. Non-Thesis</item>
        <item>M.S. Thesis</item>
        <item>Ph.D</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
