<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        tools:context=".facultyDirectory.FacultyDetailActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/email_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_frame"
            app:srcCompat="@drawable/recycle_view_item" />

        <ImageView
            android:id="@+id/image_frame"
            android:layout_width="225dp"
            android:layout_height="225dp"
            app:layout_constraintBottom_toBottomOf="@+id/professor_image"
            app:layout_constraintEnd_toEndOf="@+id/professor_image"
            app:layout_constraintStart_toStartOf="@+id/professor_image"
            app:layout_constraintTop_toTopOf="@+id/professor_image"
            app:srcCompat="@android:color/black"
            tools:srcCompat="@android:color/black" />

        <ImageView
            android:id="@+id/professor_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder" />

        <TextView
            android:id="@+id/professor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/name_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/professor_image" />

        <TextView
            android:id="@+id/professor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/title_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/stegemanGray"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/professor_name" />

        <TextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/email_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/professor_title" />

        <TextView
            android:id="@+id/email_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_placeholder"
            android:textColor="@color/stegemanGray"
            app:layout_constraintBottom_toBottomOf="@+id/email_title"
            app:layout_constraintStart_toStartOf="@+id/website_content"
            app:layout_constraintTop_toTopOf="@+id/email_title" />

        <TextView
            android:id="@+id/office_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/office_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_content" />

        <TextView
            android:id="@+id/office_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/office_placeholder"
            android:textColor="@color/stegemanGray"
            app:layout_constraintBottom_toBottomOf="@+id/office_title"
            app:layout_constraintStart_toStartOf="@+id/website_content"
            app:layout_constraintTop_toTopOf="@+id/office_title" />

        <TextView
            android:id="@+id/website_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/website_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/office_content" />

        <TextView
            android:id="@+id/website_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/website_placeholder"
            android:textColor="#238DD5"
            app:layout_constraintBottom_toBottomOf="@+id/website_title"
            app:layout_constraintStart_toEndOf="@+id/website_title"
            app:layout_constraintTop_toTopOf="@+id/website_title" />

        <TextView
            android:id="@+id/research_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/reserach_focus_title"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/website_content" />

        <TextView
            android:id="@+id/research_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/research_placeholder"
            android:textColor="@color/stegemanGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/research_title" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/red_button"
            android:text="@string/directions_button"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/research_content" />

        <TextView
            android:id="@+id/disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="16dp"
            android:text="@string/directions_disclaimer"
            android:textColor="@color/stegemanGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>